Fix line wrapping

--- a/src/components/Bio/introduction.module.css
+++ b/src/components/Bio/introduction.module.css
@@ -5,7 +5,7 @@
 }
 
 .text {
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .picture {
